fix a spacing error

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @media (max-width: 1000px) {
   body {
-    padding:2px 4px;
-    width: 90%;
+    /* padding:2px 4px;
+    width: 90%; */
     line-height: 1;
   }
 }
